--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -6,6 +6,7 @@
     &__identitetogloggut {
         display: flex;
         align-items: center;
+        margin-right: 0.5rem;
 
         &__identitet {
             padding-right: 1rem;
