--- a/src/OpprettAvtale/OpprettAvtaleArbeidsgiver/OpprettAvtaleArbeidsgiver.less
+++ b/src/OpprettAvtale/OpprettAvtaleArbeidsgiver/OpprettAvtaleArbeidsgiver.less
@@ -14,16 +14,38 @@
         align-items: center;
     }
 
+    &__tiltakstype-wrapper > .navds-radio-buttons {
+        display: flex;
+        flex-wrap: wrap;
+
+        .radio-panel {
+            width: 20rem;
+
+            &:nth-child(odd) {
+                margin-right: 1rem;
+            }
+
+            &:nth-child(odd), &:nth-child(even) {
+                margin-bottom: 0.5rem;
+            }
+        }
+    }
+
     @media (min-width: @screen-md-min) {
-        &__tiltakstypeWrapper {
+        &__tiltakstype-wrapper > .navds-radio-buttons {
             display: flex;
             flex-wrap: wrap;
 
-            label {
-                width: 28rem;
-                flex-grow: 1;
-                margin-right: 0.5rem;
-                margin-bottom: 0.5rem;
+            .radio-panel {
+                width: 27rem;
+
+                &:nth-child(odd) {
+                    margin-right: 1rem;
+                }
+
+                &:nth-child(odd), &:nth-child(even) {
+                    margin-bottom: 0.5rem;
+                }
             }
         }
     }
