oppdatert radioPanel grupper

--- a/src/AvtaleSide/steg/StillingSteg/StillingsSteg.less
+++ b/src/AvtaleSide/steg/StillingSteg/StillingsSteg.less
@@ -1,13 +1,6 @@
 .StillingsSteg {
-    &__stillingstype_radio {
+    &__stillingstype_radio > .navds-radio-buttons {
         display: flex;
 
-        label {
-            flex-grow: 1;
-            margin-right: 0.5rem;
-            &:last-child {
-                margin-right: 0;
-            }
-        }
     }
 }
