--- a/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtaleVeileder/OpprettAvtale.less
@@ -1,4 +1,7 @@
-@import '~nav-frontend-core/less/_variabler';
+@screen-sm: 768px;
+@screen-sm-min: @screen-sm;
+@screen-md: 992px;
+@screen-md-min: @screen-md;
 
 .opprett-avtale {
   padding: 2rem 1rem;
@@ -148,7 +151,6 @@
 
     &__horisontalGruppeWrapper {
       display: flex;
-      flex-direction: row;
 
       label {
         flex-grow: 1;
