--- a/src/AvtaleSide/steg/BeregningTilskudd/visningTilskuddsperioder/visningTilskuddsperioder.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/visningTilskuddsperioder/visningTilskuddsperioder.less
@@ -18,4 +18,12 @@
         border-top: 1px solid #c6c2bf;
         padding: 1rem 0;
     }
+
+    &__melding-arbeidsgiver, &__melding-arbeidsgiver-text {
+        margin: 1rem 0;
+    }
+
+    &__info-redusert-prosentsats {
+        margin-bottom: 1rem;
+    }
 }
