--- a/src/komponenter/radiopanel/radioPanel.less
+++ b/src/komponenter/radiopanel/radioPanel.less
@@ -9,6 +9,11 @@
   font-size: 1rem;
   line-height: 1.375rem;
   font-weight: 400;
+  width: 100%;
+
+  &:nth-child(odd) {
+    margin-right: 1rem;
+  }
 
   &:hover {
     border: 1px solid #0067c5;
