Oppdatert input til Textfield
Co-authored-by: havardmj <Havard.Myrvold.Johannessen@nav.no>

--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/kontaktinfo.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/kontaktinfo.less
@@ -26,11 +26,12 @@
             &:first-child {
                 margin-right: 1.25rem;
             }
-        }
-        &--single {
+        }  &--single {
             .skjemaelement {
                 width: calc(50% - 0.75rem);
+            
             }
         }
+      
     }
 }
