fikset render feil og oppdatert radio komponenter

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -65,6 +65,10 @@
         width: 8rem;
     }
 
+    &__status-rad {
+        display: flex;
+    }
+
     &__besluterdato {
         margin-left: 5rem;
     }
