--- a/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreTilskudd/EndreTilskuddsberegning.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreTilskudd/EndreTilskuddsberegning.less
@@ -16,10 +16,13 @@
     &__ikon {
         margin-right: 0.5rem;
     }
+
+    &__radioPanel-tittel {
+        margin-bottom: 0.5rem;
+        padding: 0.5rem 0 0.25rem 0;
+    }
     &__radioPanel {
-        &--tittel {
-            padding: 0.5rem 0 0.25rem 0;
-        }
+        margin: 1.5rem 0;
     }
 
     @media (min-width: 768px) {
