--- a/src/komponenter/TelefonnummerInput/TelefonnummerInput.less
+++ b/src/komponenter/TelefonnummerInput/TelefonnummerInput.less
@@ -1,13 +1,13 @@
 .telefonnummer-input-container {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
 
     &__alert {
         margin-top: 1rem;
     }
 
     &__tekstField {
-        padding: 1rem 1rem 1rem 0;
+        padding: 1rem 0;
     }
 }
