--- a/src/komponenter/VisueltDisabledInputFelt/VisueltDisabledInputFelt.less
+++ b/src/komponenter/VisueltDisabledInputFelt/VisueltDisabledInputFelt.less
@@ -8,6 +8,6 @@
       padding: 0.40rem;
       background-color: #f1f1f1;
       color: #262626;
-      width:100%;
+      width: calc(50% - 1rem);
     }
   }
