--- a/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreKontaktInfo/EndreKontaktInformasjon.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/endringAvAvtaleInnhold/endreKontaktInfo/EndreKontaktInformasjon.less
@@ -43,9 +43,14 @@
       flex-wrap: wrap;
       flex: 0 45%;
 
-      .navds-form-field:nth-child(odd) {
 
-        margin-right: 1rem;
+      .navds-form-field {
+        width: calc(50% - 1rem);
+
+
+        &:nth-child(odd) {
+          margin-right: 1rem;
+        }
       }
 
       & > .skjemaelement {
