--- a/src/AvtaleSide/steg/VarighetSteg/varighetSteg.less
+++ b/src/AvtaleSide/steg/VarighetSteg/varighetSteg.less
@@ -8,8 +8,8 @@
     margin: 0.5rem 0;
   }
 
-  &__info-arena-opprydding-alert, &__Stillingsprosent-input-container {
-    margin: 1rem 0;
+  &__info-arena-opprydding-alert &__Stillingsprosent-input-container{
+    margin: 1rem 0;   
   }
 
   &__info-arena-opprydding-avsnitt {
@@ -27,6 +27,7 @@
   }
 
   &__input-container {
-    width: 70%;
+    margin-top: 1rem;
+    width: 35%;
   }
 }
