fjernet resterende nav-frontend pakker.
Co-authored-by: magnus.skalleberg.rom@nav.no

--- a/src/AvtaleOversikt/AvtaleOversiktSkeleton/AvtaleOversiktSkeleton.less
+++ b/src/AvtaleOversikt/AvtaleOversiktSkeleton/AvtaleOversiktSkeleton.less
@@ -1,4 +1,5 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../tiltak_variabler.less";
+
 .avtaleoversiktskeleton {
     &__spinner {
         display: flex;
