--- a/src/AvtaleSide/steg/VarighetSteg/InfoBoks/InfoBoks.less
+++ b/src/AvtaleSide/steg/VarighetSteg/InfoBoks/InfoBoks.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../../../tiltak_variabler.less";
 
 .infoboks {
     border: 3px solid @navBlaLighten80;
