--- a/src/index.less
+++ b/src/index.less
@@ -6,6 +6,7 @@
 @import 'AvtaleSide/steg/GodkjenningSteg/Oppsummering/Stegoppsummering/Stegoppsummering.less';
 @import 'AvtaleSide/steg/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less';
 @import 'AvtaleOversikt/AvtaleOversikt.less';
+@import (reference) "tiltak_variabler.less";
 
 body {
     font-size: 1rem;
