--- a/src/komponenter/form/SkjemaTittel.less
+++ b/src/komponenter/form/SkjemaTittel.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../tiltak_variabler.less";
 
 .skjema-tittel {
     padding-bottom: 1rem;
