--- a/src/AvtaleOversikt/AvtalekortMobil.less
+++ b/src/AvtaleOversikt/AvtalekortMobil.less
@@ -1,4 +1,5 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../tiltak_variabler.less";
+
 .avtalekortMobil {
     padding: 1.5rem 1rem 1.5rem 2rem;
     margin-bottom: 0.5rem;
