--- a/src/AvtaleSide/steg/GodkjenningSteg/GodkjenningStatus/GodkjenningStatus.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/GodkjenningStatus/GodkjenningStatus.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../../../tiltak_variabler.less";
 
 .godkjenningstatus {
     padding: 1rem;
