--- a/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/instruks/instruks.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/instruks/instruks.less
@@ -1,4 +1,5 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../../../../tiltak_variabler.less";
+
 .instruks {
     &__subheader {
         padding: 0 0 0 0;
