--- a/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/TidligereVersjoner.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Versjonering/TidligereVersjoner.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../../../tiltak_variabler.less";
 
 .tidligereVersjoner {
     margin-bottom: 0.75rem;
