--- a/src/komponenter/Innholdsboks/Innholdsboks.less
+++ b/src/komponenter/Innholdsboks/Innholdsboks.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../tiltak_variabler.less";
 
 .innholdsboks, .innholdsboks.godkjenning {
     margin-bottom: 0.25rem;
