--- a/src/komponenter/Veilederpanel/VeilederpanelMedIkon.less
+++ b/src/komponenter/Veilederpanel/VeilederpanelMedIkon.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../tiltak_variabler.less";
 
 .veilederpanel-med-ikon {
     margin-bottom: 1rem;
