--- a/src/komponenter/kort/KortKnapper.less
+++ b/src/komponenter/kort/KortKnapper.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../tiltak_variabler.less";
 
 .kort-knapper {
     display: flex;
