--- a/src/komponenter/modal/AnnullerAvtaleModal.less
+++ b/src/komponenter/modal/AnnullerAvtaleModal.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler';
+@import (reference) "../../tiltak_variabler.less";
 
 .annuller-avtale-modal {
     &__grunner-og-annet {
