--- a/src/komponenter/alleredeOpprettetTiltak/modal/alleredeOpprettetAvtaleModal.less
+++ b/src/komponenter/alleredeOpprettetTiltak/modal/alleredeOpprettetAvtaleModal.less
@@ -1,4 +1,4 @@
-@import 'node_modules/nav-frontend-core/less/_variabler';
+@import (reference) "../../../tiltak_variabler.less";
 
 .alleredeOpprettetAvtaleModal {
   &__modal-container {
