--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -14,4 +14,17 @@
             left: 3rem;
         }
     }
+    &__lonn-per-mnd-seksjon {
+        &:nth-child(n) {
+            margin-bottom: 0.5rem;
+            & > ul {
+                margin: 0.5rem 0;
+            }
+        }
+    }
+    &__valuta-input {
+        margin-top: 1rem;
+    }
 }
+
+
