--- a/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/AvtaleinfoFeltSjekk/AvtaleinfoFeltSjekk.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/Oppsummering/AvtaleinfoFeltSjekk/AvtaleinfoFeltSjekk.less
@@ -31,6 +31,12 @@
     &__etikettInfo {
         overflow: hidden;
         text-overflow: ellipsis;
-        white-space: nowrap;
+
+    }
+
+    @media(min-width: 768px) {
+        &__etikettInfo {
+            white-space: nowrap;
+        }
     }
 }
