oppdatert styling og skilt ut elementer i varighet steget

--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/kontaktinfo.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/kontaktinfo.less
@@ -1,6 +1,6 @@
 .kontaktinfo {
   &__container {
-    padding: 0.5rem 0.5rem 2rem 0.5rem;
+    padding: 0.5rem 0.5rem 1rem 0.5rem;
   }
 
   &__skjemagruppe {
@@ -9,6 +9,9 @@
 
   &__rad {
     display: flex;
+    align-items: flex-start;
+    margin-bottom: 1rem;
+
 
     .navds-form-field {
       width: calc(50% - 1rem);
