--- a/src/AvtaleSide/steg/VarighetSteg/varighetSteg.less
+++ b/src/AvtaleSide/steg/VarighetSteg/varighetSteg.less
@@ -1,15 +1,20 @@
 .varighetsteg {
 
-  &__ingress-sommerjobb {
+  &__ingress {
     margin-bottom: 1rem;
   }
 
   &__info-veileder {
-    margin: 0.5rem 0;
+    margin-bottom: 0.5rem;
   }
 
-  &__info-arena-opprydding-alert &__Stillingsprosent-input-container{
-    margin: 1rem 0;   
+  &__rad {
+    margin-bottom: 1rem;
+  }
+
+  &__info-arena-opprydding-alert &__Stillingsprosent-input-container,
+  &__lagre-knapp {
+    margin: 1rem 0;
   }
 
   &__info-arena-opprydding-avsnitt {
