--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -3,22 +3,18 @@
   &__valuta-input {
     & > .input {
       margin-top: 1rem;
-      margin-bottom: 1rem;
     }
   }
 
-  &__feriepenger, &__arbeidsgiveravgift, &__kontonummer, &__tjenestepensjon {
-    & > Label {
-      margin-top: 2rem;
-    }
+  &__tilskuddsprosent-heading, &__tilskuddsprosent {
+    margin-bottom: 1.25rem;
+  }
 
-    & > p, & > div, & > input {
-      margin: 0.5rem 0;
-    }
+  &__rad {
+    margin-bottom: 2rem;
   }
 
   &__tjenestepensjon, &__arbeidsgiveravgift {
-    margin: 0.5rem 0;
 
     .navds-form-field {
       & > input, & > div {
