--- a/src/AvtaleSide/steg/GodkjenningSteg/GodkjenningSteg.less
+++ b/src/AvtaleSide/steg/GodkjenningSteg/GodkjenningSteg.less
@@ -4,6 +4,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+        margin-bottom: 1.5rem;
 
         & > .knapp {
             margin-bottom: 0.5rem;
