--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/kontorInfo/deltakerInfo.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/kontorInfo/deltakerInfo.less
@@ -20,6 +20,10 @@
     margin: 1rem 0;
   }
 
+  &__info-verdi {
+    font-weight: 600;
+  }
+
   @media (min-width: 768px) {
     &__info-rad {
       display: flex;
