--- a/src/AvtaleSide/steg/StillingSteg/StillingsSteg.less
+++ b/src/AvtaleSide/steg/StillingSteg/StillingsSteg.less
@@ -1,6 +1,18 @@
 .StillingsSteg {
     &__stillingstype_radio > .navds-radio-buttons {
         display: flex;
-
     }
+
+    &__label {
+        margin-bottom: 0.5rem;
+    }
+
+    .stillingsTittelVelger, &__stilling-beskrivelse, &__stillingstype_radio {
+        margin-bottom: 1.75rem;
+    }
+
+    &__lagre-knapp {
+        margin-top: 0.5rem;
+    }
+
 }
