--- a/src/komponenter/form/SkjemaTittel.less
+++ b/src/komponenter/form/SkjemaTittel.less
@@ -1,13 +1,13 @@
 @import (reference) "../../tiltak_variabler.less";
 
 .skjema-tittel {
-    padding-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 .skjema-tittel .hjelpetekst {
     top: 0.25rem;
 }
 @media (min-width: @screen-sm-min) {
     .skjema-tittel {
-        padding-bottom: 1.5rem;
+        margin-bottom: 1.25rem;
     }
 }
