--- a/src/komponenter/radiopanel/radioPanelGruppeHorisontal.less
+++ b/src/komponenter/radiopanel/radioPanelGruppeHorisontal.less
@@ -8,6 +8,9 @@
         &:nth-child(odd), &:nth-child(even) {
           margin: 0 0.375rem;
         }
+        &:first-child {
+          margin: 0;
+        }
       }
     }
   }
