--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -15,3 +15,10 @@
         flex-direction: column;
     }
 }
+
+.avtaleoversikt-pagination {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
