--- a/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
+++ b/src/AvtaleSide/steg/BeregningTilskudd/BeregningTilskuddSteg.less
@@ -1,6 +1,9 @@
+@import (reference) "../../../tiltak_variabler.less";
+
 .beregningTilskuddSteg {
 
   &__valuta-input {
+    width: 50%;
     & > .input {
       margin-top: 1rem;
     }
