--- a/src/AvtaleSide/steg/KontaktInformasjonSteg/kontorInfo/deltakerInfo.less
+++ b/src/AvtaleSide/steg/KontaktInformasjonSteg/kontorInfo/deltakerInfo.less
@@ -1,20 +1,41 @@
 .deltakerinfo {
-    margin: 0 0.5rem 2.5rem 0.5rem;
+  margin: 0 0.5rem 2.5rem 0.5rem;
 
-    &__ingress {
-        margin-bottom: 1rem;
-        display: flex;
-        align-items: center;
+  &__ingress {
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
 
-        &--oppsummering {
-            border-bottom: 1px solid #c9c9c9;
-            padding-bottom: 0.25rem;
-        }
+    &--oppsummering {
+      border-bottom: 1px solid #c9c9c9;
+      padding-bottom: 0.25rem;
     }
-    &__ikon {
-        margin-right: 0.5rem;
-    }
+  }
+
+  &__ikon {
+    margin-right: 0.5rem;
+  }
+
+  &__info-rad {
+    margin: 1rem 0;
+  }
+
+  &__info-verdi {
+    font-weight: 600;
+  }
+
+  @media (min-width: 768px) {
     &__info-rad {
-        margin: 1rem 0;
+      display: flex;
+      justify-content: flex-start;
+
+      & > .deltakerinfo__info-container:nth-child(1) {
+        margin-right: 1rem;
+      }
     }
+
+    &__info-container {
+      min-width: 15rem;
+    }
+  }
 }
