--- a/src/AvtaleOversikt/Filtrering/SøkeInput.less
+++ b/src/AvtaleOversikt/Filtrering/SøkeInput.less
@@ -1,3 +1,18 @@
+.sok {
+    display: flex;
+    align-items: flex-start;
+
+    &__input-sok {
+        margin-right: 1rem;
+        width:100%;
+    } 
+
+    &__button {
+        margin-top:0.5rem
+    }
+}
+
+
 .søk {
     &__input-sok {
         margin-bottom: 1rem;
