oppdatert BeslutterOversikt. lagt til sorting og filter for overiktsen.
Co-authored-by: lundmark.mattias@gmail.com

--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -49,12 +49,12 @@
     }
 
     &__veileder {
-        width: 5rem;
+        min-width: 8rem;
         padding-right: 1rem;
     }
 
-    &__dato {
-        width: 6rem;
+    &__dato, &__besluterdato {
+        min-width: 10rem;
     }
 
     &__statusikon {
@@ -69,15 +69,4 @@
         display: flex;
     }
 
-    &__besluterdato {
-        margin-left: 5rem;
-    }
-
-    &__headerstatus {
-        margin-left: 8.5rem;
-    }
-
-    &__beslutterStatus {
-        margin-left: 5rem;
-    }
 }
