oppdatert styling pa avtaletabell for arbeidsgiver og deltaker

--- a/src/AvtaleOversikt/AvtaleOversikt.less
+++ b/src/AvtaleOversikt/AvtaleOversikt.less
@@ -1,4 +1,3 @@
-
 .avtaleoversikt {
     display: flex;
     flex-direction: column;
@@ -14,11 +13,22 @@
         display: flex;
         flex-direction: column;
     }
+
+    &__arbeidsgiver-informasjon {
+        border: 0.1rem solid #c6c2bf;
+        border-radius: 0.5rem;
+        margin-top: 1rem;
+        background-color: white;
+
+        &-nytt-avsnitt {
+            margin-top: 1rem;
+        }
+    }
 }
 
 .avtaleoversikt-pagination {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    margin-top: 2rem;
 }
