--- a/src/AvtaleOversikt/AvtaleTabell.less
+++ b/src/AvtaleOversikt/AvtaleTabell.less
@@ -79,6 +79,9 @@
 
         &-dato {
             min-width: 6rem;
+            &--arbeidsgiver-deltaker {
+                min-width: 9.5rem;
+            }
         }
 
         &-statusikon {
